Using git GUI commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<h1>Annuity UI</h1>
+<h1>Annuity UI Updated</h1>
 <div *ngIf="isAuthenticated$ | async; else loginTemplate">
   <h1>Welcome!</h1>
   <button >Logout</button>
